--- a/tenzies/package.json
+++ b/tenzies/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tenzies",
-  "homepage": "https://github.com/lswebdevelops/React_scrimba_projects/tree/main/tenzies",
+  "homepage": "https://lswebdevelops.github.io/tenzies",
   "private": true,
   "version": "0.0.0",
   "type": "module",
